@@ -3,259 +3,235 @@ package com.virgo.rekomendasos.service;
 import com.virgo.rekomendasos.model.meta.Place;
 import com.virgo.rekomendasos.repo.PlaceRepository;
 import com.virgo.rekomendasos.service.impl.PlaceServiceImpl;
-import com.virgo.rekomendasos.utils.dto.restClientDto.PlaceResponseDto;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
-import org.springframework.web.client.RestClient;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 public class PlaceServiceTest {
 
     @Mock
     private PlaceRepository placeRepository;
 
     @Mock
-    private RestClient restClient;
+    private GeoApiService geoApiService;
 
-    @Mock
-    private RestClient.RequestHeadersUriSpec<?> requestHeadersUriSpec;
-
-    @Mock
-    private RestClient.RequestHeadersSpec<?> requestHeadersSpec;
-
-    @Mock
-    private RestClient.ResponseSpec responseSpec;
-
+    @Spy
     @InjectMocks
-    private PlaceServiceImpl placeService;
+    private PlaceServiceImpl placeServiceImpl;
+
+    private Place place;
+    private Place place2;
+    private Place place3;
+    private Place placeToUpdate;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-
-        // Setup RestClient chain
-        doReturn(requestHeadersUriSpec).when(restClient).get();
-        doReturn(requestHeadersSpec).when(requestHeadersUriSpec).uri(anyString());
-        doReturn(responseSpec).when(requestHeadersSpec).retrieve();
-    }
-
-    @Test
-    void testCreate_Success() {
-        Place inputPlace = Place.builder()
+        place = Place.builder()
                 .id("1")
-                .name("Test Place")
-                .latitude(1.0)
-                .longitude(1.0)
+                .name("Museum A")
+                .latitude(40.7128)
+                .longitude(-74.0060)
+                .rating(4)
+                .build();
+
+        place2 = Place.builder()
+                .id("2")
+                .name("Museum B")
+                .latitude(34.0522)
+                .longitude(-118.2437)
+                .rating(3)
+                .build();
+
+        place3 = Place.builder()
+                .id("3")
+                .name("Museum C")
+                .latitude(37.7749)
+                .longitude(-122.4194)
                 .rating(5)
                 .build();
 
-        when(placeRepository.save(any(Place.class))).thenReturn(inputPlace);
 
-        Place result = placeService.create(inputPlace);
+        placeToUpdate = Place.builder()
+                .id("1")
+                .name("Updated Place")
+                .latitude(40.7128)
+                .longitude(-74.0060)
+                .rating(5)
+                .build();
+    }
+
+    @Test
+    void findAll_WhenSuccess_ReturnListOfPlace() {
+        when(placeRepository.findAll()).thenReturn(List.of(place, place2));
+
+        List<Place> places = placeServiceImpl.findAll();
+
+        assertNotNull(places);
+        assertEquals(2, places.size());
+    }
+
+    @Test
+    void findById_WhenPlaceFromRepo_ReturnPlace() {
+        when(placeRepository.findById("1")).thenReturn(Optional.of(place));
+
+        Place result = placeServiceImpl.findById("1");
+
+        assertEquals(result, place);
+    }
+
+    @Test
+    void findById_WhenPlaceFromGeoApi_ReturnPlace() {
+        when(placeRepository.findById("1")).thenReturn(Optional.empty());
+        when(geoApiService.findById("1")).thenReturn(Optional.of(place));
+
+        Place result = placeServiceImpl.findById("1");
+
+        assertEquals(result, place);
+    }
+
+    @Test
+    void findById_WhenPlaceNotFound_ReturnException() {
+        when(placeRepository.findById("1")).thenReturn(Optional.empty());
+        when(geoApiService.findById("1")).thenReturn(Optional.empty());
+
+        Exception exception = assertThrows(RuntimeException.class, () -> placeServiceImpl.findById("1"));
+
+        assertEquals("Place not found", exception.getMessage());
+    }
+
+    @Test
+    void findById_WhenSuccess_ReturnPlace() {
+        when(placeRepository.findById("1")).thenReturn(Optional.of(place));
+
+        Place result = placeServiceImpl.findById("1");
 
         assertNotNull(result);
-        assertEquals(inputPlace.getId(), result.getId());
-        assertEquals(inputPlace.getName(), result.getName());
-        assertEquals(inputPlace.getLatitude(), result.getLatitude());
-        assertEquals(inputPlace.getLongitude(), result.getLongitude());
-        assertEquals(inputPlace.getRating(), result.getRating());
-
-        verify(placeRepository, times(1)).save(any(Place.class));
+        assertEquals(place, result);
     }
 
     @Test
-    void testFindById_ExistingPlace() {
-        String placeId = "1";
-        Place existingPlace = Place.builder().id(placeId).name("Existing Place").build();
+    void create_WhenSuccess_ReturnPlace() {
+        when(placeRepository.save(any(Place.class))).thenReturn(place);
 
-        when(placeRepository.findById(placeId)).thenReturn(Optional.of(existingPlace));
-
-        Place result = placeService.findById(placeId);
+        Place result = placeServiceImpl.create(place);
 
         assertNotNull(result);
-        assertEquals(placeId, result.getId());
-        assertEquals("Existing Place", result.getName());
-
-        verify(placeRepository, times(1)).findById(placeId);
-        verify(restClient, never()).get();
+        assertEquals(place, result);
     }
 
     @Test
-    void testFindById_PlaceFromApi() {
-        String placeId = "2";
-        Place apiPlace = Place.builder().id(placeId).name("API Place").build();
+    void update_WhenSuccess_ReturnPlace() {
+        when(placeRepository.findById("1")).thenReturn(Optional.of(place));
+        when(placeRepository.save(any(Place.class))).thenReturn(placeToUpdate);
 
-        when(placeRepository.findById(placeId)).thenReturn(Optional.empty());
-        doReturn(createMockPlaceResponseDto(Arrays.asList(apiPlace)))
-                .when(responseSpec).body(PlaceResponseDto.class);
-
-        Place result = placeService.findById(placeId);
+        Place result = placeServiceImpl.update("1", placeToUpdate);
 
         assertNotNull(result);
-        assertEquals(placeId, result.getId());
-        assertEquals("API Place", result.getName());
-
-        verify(placeRepository, times(1)).findById(placeId);
-        verify(restClient, times(1)).get();
+        assertEquals(placeToUpdate, result);
     }
 
     @Test
-    void testFindById_NotFound() {
-        String placeId = "3";
+    void update_WhenPlaceNotFound_ReturnException() {
+        when(placeRepository.findById("1")).thenReturn(Optional.empty());
 
-        when(placeRepository.findById(placeId)).thenReturn(Optional.empty());
-        doReturn(createMockPlaceResponseDto(Arrays.asList()))
-                .when(responseSpec).body(PlaceResponseDto.class);
+        Exception exception = assertThrows(RuntimeException.class, () -> placeServiceImpl.update("1", placeToUpdate));
 
-        assertThrows(RuntimeException.class, () -> placeService.findById(placeId));
-
-        verify(placeRepository, times(1)).findById(placeId);
-        verify(restClient, times(1)).get();
+        assertEquals("Place can not be updated", exception.getMessage());
     }
 
     @Test
-    void testUpdate_Success() {
-        String placeId = "1";
-        Place existingPlace = Place.builder().id(placeId).name("Old Name").build();
-        Place updatedPlace = Place.builder().id(placeId).name("New Name").build();
+    void deleteByUser_WhenIdNotNull_DeletedPlace() {
+        placeServiceImpl.delete("1");
 
-        when(placeRepository.findById(placeId)).thenReturn(Optional.of(existingPlace));
-        when(placeRepository.save(any(Place.class))).thenReturn(updatedPlace);
-
-        Place result = placeService.update(placeId, updatedPlace);
-
-        assertNotNull(result);
-        assertEquals(placeId, result.getId());
-        assertEquals("New Name", result.getName());
-
-        verify(placeRepository, times(1)).findById(placeId);
-        verify(placeRepository, times(1)).save(any(Place.class));
+        verify(placeRepository).deleteById("1");
     }
 
     @Test
-    void testUpdate_NotFound() {
-        String placeId = "1";
-        Place updatedPlace = Place.builder().id(placeId).name("New Name").build();
+    void deleteByUser_WhenIdNull_DoNothing() {
+        placeServiceImpl.delete(null);
 
-        when(placeRepository.findById(placeId)).thenReturn(Optional.empty());
-
-        assertThrows(RuntimeException.class, () -> placeService.update(placeId, updatedPlace));
-
-        verify(placeRepository, times(1)).findById(placeId);
-        verify(placeRepository, never()).save(any(Place.class));
+        verify(placeRepository, never()).deleteById("1");
     }
 
     @Test
-    void testDelete() {
-        String placeId = "1";
+    void findAllPublicPlace_LimitAndSearchNull_ReturnListOfPlace() {
+        doReturn(new ArrayList<>(List.of(place, place2))).when(placeServiceImpl).findAll();
+        when(geoApiService.findAll()).thenReturn(new ArrayList<>(List.of(place, place3)));
 
-        placeService.delete(placeId);
+        List<Place> places = placeServiceImpl.findAllPublicPlace(null, null);
 
-        verify(placeRepository, times(1)).deleteById(placeId);
+
+        assertNotNull(places);
+        assertEquals(3, places.size());
+        assertTrue(places.contains(place));
+        assertTrue(places.contains(place2));
+        assertTrue(places.contains(place3));
+
+        verify(placeServiceImpl).findAll();
+        verify(geoApiService).findAll();
+        verify(geoApiService, never()).findAll(any(), any());
     }
 
     @Test
-    void testFindAll_WithinLimit() {
-        List<Place> places = Arrays.asList(
-                Place.builder().id("1").name("Place 1").build(),
-                Place.builder().id("2").name("Place 2").build()
-        );
+    void findAllPublicPlace_LimitAndSearchNotNull_ReturnListOfPlace() {
+        doReturn(new ArrayList<>(List.of(place, place2))).when(placeServiceImpl).findAll();
+        when(geoApiService.findAll(any(), any())).thenReturn(new ArrayList<>(List.of(place, place3)));
 
-        when(placeRepository.findAllWithLimit(100)).thenReturn(places);
+        List<Place> places = placeServiceImpl.findAllPublicPlace( 2, "museum");
 
-        List<Place> result = placeService.findAll(null);
+        assertNotNull(places);
+        assertEquals(2, places.size());
+        assertTrue(places.contains(place));
+        assertTrue(places.contains(place2));
 
-        assertEquals(2, result.size());
-        verify(placeRepository, times(1)).findAllWithLimit(100);
-        verify(restClient, never()).get();
+        verify(placeServiceImpl).findAll();
+        verify(geoApiService).findAll(2, "museum");
+        verify(geoApiService, never()).findAll();
     }
 
     @Test
-    void testFindAll_ExceedingLimit() {
-        List<Place> dbPlaces = Arrays.asList(
-                Place.builder().id("1").name("Place 1").build()
-        );
-        List<Place> apiPlaces = Arrays.asList(
-                Place.builder().id("2").name("Place 2").build(),
-                Place.builder().id("3").name("Place 3").build()
-        );
+    void findAllPopularPublicPlaces_LimitAndSearchNull_ReturnListOfPlace() {
+        doReturn(new ArrayList<>(List.of(place, place2))).when(placeServiceImpl).findAll();
+        when(geoApiService.findAll()).thenReturn(new ArrayList<>(List.of(place, place3)));
 
-        when(placeRepository.findAllWithLimit(100)).thenReturn(dbPlaces);
-        doReturn(createMockPlaceResponseDto(apiPlaces))
-                .when(responseSpec).body(PlaceResponseDto.class);
+        List<Place> places = placeServiceImpl.findAllPopularPublicPlaces(null, null);
 
-        List<Place> result = placeService.findAll(null);
+        assertNotNull(places);
+        assertEquals(3, places.size());
+        assertTrue(places.contains(place));
+        assertTrue(places.contains(place2));
+        assertTrue(places.contains(place3));
 
-        assertEquals(3, result.size());
-        verify(placeRepository, times(1)).findAllWithLimit(100);
-        verify(restClient, times(1)).get();
+        verify(placeServiceImpl).findAll();
+        verify(geoApiService).findAll();
+        verify(geoApiService, never()).findAll(any(), any());
     }
 
     @Test
-    void testFindAllPopularPlaces() {
-        List<Place> places = Arrays.asList(
-                Place.builder().id("1").name("Place 1").rating(5).build(),
-                Place.builder().id("2").name("Place 2").rating(4).build(),
-                Place.builder().id("3").name("Place 3").rating(3).build()
-        );
+    void findAllPopularPublicPlaces_LimitAndSearchNotNull_ReturnListOfPlace() {
+        doReturn(new ArrayList<>(List.of(place, place2))).when(placeServiceImpl).findAll();
+        when(geoApiService.findAll(any(), any())).thenReturn(new ArrayList<>(List.of(place, place3)));
 
-        when(placeRepository.findAll()).thenReturn(places);
+        List<Place> places = placeServiceImpl.findAllPopularPublicPlaces( 2, "museum");
 
-        List<Place> result = placeService.findAllPopularPlaces(null);
+        assertNotNull(places);
+        assertEquals(2, places.size());
+        assertTrue(places.contains(place));
+        assertTrue(places.contains(place2));
 
-        assertEquals(3, result.size());
-        assertEquals("Place 1", result.get(0).getName());
-        assertEquals("Place 2", result.get(1).getName());
-        assertEquals("Place 3", result.get(2).getName());
-
-        verify(placeRepository, times(1)).findAll();
+        verify(placeServiceImpl).findAll();
+        verify(geoApiService).findAll(2, "museum");
+        verify(geoApiService, never()).findAll();
     }
 
-    @Test
-    void testGetAllPlacesFromApi() {
-        List<Place> apiPlaces = Arrays.asList(
-                Place.builder().id("1").name("API Place 1").build(),
-                Place.builder().id("2").name("API Place 2").build()
-        );
-
-        doReturn(createMockPlaceResponseDto(apiPlaces))
-                .when(responseSpec).body(PlaceResponseDto.class);
-
-        List<Place> result = placeService.getAllPlacesFromApi();
-
-        assertEquals(2, result.size());
-        assertEquals("API Place 1", result.get(0).getName());
-        assertEquals("API Place 2", result.get(1).getName());
-
-        verify(restClient, times(1)).get();
-    }
-
-    private PlaceResponseDto createMockPlaceResponseDto(List<Place> places) {
-        PlaceResponseDto responseDto = new PlaceResponseDto();
-        List<PlaceResponseDto.Features> features = places.stream()
-                .map(place -> {
-                    PlaceResponseDto.Features.Properties properties = PlaceResponseDto.Features.Properties.builder()
-                            .placeId(place.getId())
-                            .name(place.getName())
-                            .latitude(place.getLatitude())
-                            .longitude(place.getLongitude())
-                            .build();
-                    return PlaceResponseDto.Features.builder().properties(properties).build();
-                })
-                .toList();
-        responseDto.setFeatures(features);
-        return responseDto;
-    }
 }
